--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -311,6 +311,37 @@
       </a>
     </div>
   </div>
+
+  <div class="curso">
+    <div class="curso-cabecera">
+      <img
+        src="img/ChatGPT o Gemini en el Estudio Contable.jpg" alt="ChatGPT o Gemini en el Estudio Contable"
+        class="curso-imagen-container"
+      />
+      <h2>ChatGPT o Gemini en el Estudio Contable: Tu Asistente 24/7 para Consultas y Reportes</h2>
+      <a
+        href="#"
+        class="btn btn-toggle-detalles"
+        aria-label="Más Información"
+      >
+        <span class="toggle-icon-placeholder"></span>
+      </a>
+    </div>
+    <div class="curso-detalles">
+      <p>
+        Domina la inteligencia artificial para automatizar desde consultas normativas hasta reportes financieros, y evoluciona tu rol hacia la asesoría estratégica de alto impacto.
+      </p>
+      <p><strong>Docente:</strong> Cdora. Tania Damiani</p>
+      <p><strong>Fecha:</strong> 11 de Julio de 2025</p>
+      <a
+        href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=564"
+        class="btn btn-ingresar"
+        aria-label="Ingresar a la capacitación"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+      </a>
+    </div>
+  </div>
 </div>
 
 </div>
