Atención al Cliente con IA

--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -342,6 +342,37 @@
       </a>
     </div>
   </div>
+
+  <div class="curso">
+    <div class="curso-cabecera">
+      <img
+        src="img/Atención al Cliente con IA.jpeg" alt="Atención al Cliente con IA"
+        class="curso-imagen-container"
+      />
+      <h2>Atención al Cliente con IA: Cómo Asistir sin Perder el Toque Humano</h2>
+      <a
+        href="#"
+        class="btn btn-toggle-detalles"
+        aria-label="Más Información"
+      >
+        <span class="toggle-icon-placeholder"></span>
+      </a>
+    </div>
+    <div class="curso-detalles">
+      <p>
+        Aplica la inteligencia artificial para automatizar la atención y respuestas a tus clientes, y transforma cada consulta en una oportunidad para fortalecer tu rol como asesor de confianza.
+      </p>
+      <p><strong>Docente:</strong> Cdora. Tania Damiani</p>
+      <p><strong>Fecha:</strong> 24 de Julio de 2025</p>
+      <a
+        href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=568"
+        class="btn btn-ingresar"
+        aria-label="Ingresar a la capacitación"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+      </a>
+    </div>
+  </div>
 </div>
 
 </div>
