--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -373,6 +373,37 @@
       </a>
     </div>
   </div>
+
+  <div class="curso">
+    <div class="curso-cabecera">
+      <img
+        src="img/Taller Profesional Asistente Fiscal con IA.jpeg" alt="Asistente Fiscal con IA"
+        class="curso-imagen-container"
+      />
+      <h2>Taller Profesional: Asistente Fiscal con IA</h2>
+      <a
+        href="#"
+        class="btn btn-toggle-detalles"
+        aria-label="Más Información"
+      >
+        <span class="toggle-icon-placeholder"></span>
+      </a>
+    </div>
+    <div class="curso-detalles">
+      <p>
+        Domina la inteligencia artificial para automatizar la generación y control de declaraciones juradas, y transforma tu gestión fiscal en un modelo de máxima eficiencia y precisión.
+      </p>
+      <p><strong>Docente:</strong> Cdora. Tania Damiani</p>
+      <p><strong>Fecha:</strong> 08 de Agosto de 2025</p>
+      <a
+        href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=572"
+        class="btn btn-ingresar"
+        aria-label="Ingresar a la capacitación"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+      </a>
+    </div>
+  </div>
 </div>
 
 </div>
