--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -404,6 +404,37 @@
       </a>
     </div>
   </div>
+
+    <div class="curso">
+    <div class="curso-cabecera">
+      <img
+        src="img/Proyecciones Financieras con IA.jpg" alt="Proyecciones Financieras con IA"
+        class="curso-imagen-container"
+      />
+      <h2>Taller Profesional: Proyecciones Financieras con IA</h2>
+      <a
+        href="#"
+        class="btn btn-toggle-detalles"
+        aria-label="Más Información"
+      >
+        <span class="toggle-icon-placeholder"></span>
+      </a>
+    </div>
+    <div class="curso-detalles">
+      <p>
+        Aplica la inteligencia artificial para transformar tus datos de Excel en proyecciones y escenarios dinámicos, y evoluciona tu capacidad de análisis para la toma de decisiones estratégicas.
+      </p>
+      <p><strong>Docente:</strong> Cdora. Tania Damiani</p>
+      <p><strong>Fecha:</strong> 22 de Agosto de 2025</p>
+      <a
+        href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=579"
+        class="btn btn-ingresar"
+        aria-label="Ingresar a la capacitación"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+      </a>
+    </div>
+  </div>
 </div>
 
 </div>
