add new cap septiembre

--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -434,8 +434,70 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
       </a>
     </div>
+
+    
   </div>
+  <div class="curso">
+    <div class="curso-cabecera">
+      <img
+        src="img/Agentes de IA en Contabilidad - De la Automatización a la Autonomía.png" alt="Agentes de IA en Contabilidad - De la Automatización a la Autonomía"
+        class="curso-imagen-container"
+      />
+      <h2>Agentes de IA en Contabilidad - De la Automatización a la Autonomía</h2>
+      <a
+        href="#"
+        class="btn btn-toggle-detalles"
+        aria-label="Más Información"
+      >
+        <span class="toggle-icon-placeholder"></span>
+      </a>
+    </div>
+    <div class="curso-detalles">
+      <p>
+       Implementa agentes de IA para delegar tareas como conciliaciones avanzadas y detección de fraude, y evoluciona tu rol de ejecutor a supervisor de un equipo contable autónomo.
+      </p>
+      <p><strong>Docente:</strong> Cdora. Tania Damiani</p>
+      <p><strong>Fecha:</strong> 16 de Septiembre de 2025</p>
+      <a
+        href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=588"
+        class="btn btn-ingresar"
+        aria-label="Ingresar a la capacitación"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+      </a>
+    </div>
+
+ 
 </div>
+   <div class="curso">
+    <div class="curso-cabecera">
+      <img
+        src="img/Automatización Estratégica de la Cobranza.jpeg" alt="Automatización Estratégica de la Cobranza"
+        class="curso-imagen-container"
+      />
+      <h2>Automatización Estratégica de la Cobranza</h2>
+      <a
+        href="#"
+        class="btn btn-toggle-detalles"
+        aria-label="Más Información"
+      >
+        <span class="toggle-icon-placeholder"></span>
+      </a>
+    </div>
+    <div class="curso-detalles">
+      <p>
+        Domina el procesamiento inteligente de documentos para automatizar la carga de facturas y la comunicación con clientes, y transforma la gestión de cobranzas en un sistema proactivo y estratégico.
+      </p>
+      <p><strong>Docente:</strong> Cdora. Tania Damiani</p>
+      <p><strong>Fecha:</strong> 24 de Septiembre de 2025</p>
+      <a
+        href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=593"
+        class="btn btn-ingresar"
+        aria-label="Ingresar a la capacitación"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="icon-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+      </a>
+    </div>
 
 </div>
 
